phpmyadmin/400-deploy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: mysql 
  name: phpmyadmin
  labels:
    app: phpmyadmin

spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin:latest
          ports:
            - name: phpmyadmin
              containerPort: 80
