phpmyadmin/300-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: mysql

spec:
  ports:
    - protocol: TCP
      name: phpmyadmin
      port: 80
  selector:
    app: phpmyadmin
