phpmyadmin/500-ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
  namespace: mysql
spec:
  ingressClassName: traefik
  rules:
  - host: ${MYSQL_PHPMYADMIN_FQDN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80
